@@ -1,3 +1,7 @@
+2021-02-24 Markus Gans  <guru.mail@muenster.de>
+	* Fixed the incorrect display on terminals without 
+	  UTF-8 character encoding
+
 2021-02-20 Markus Gans  <guru.mail@muenster.de>
 	* Optimize terminal output buffer queue with differencing
 	  for strings, and control characters and control sequences
